--- a/templates/index.html
+++ b/templates/index.html
@@ -138,7 +138,8 @@
         </div>
         
         <footer class="text-center mt-5">
-            <p class="text-muted">DNA Storage System - A project for HTGAA by Aryan Choudhary</p>
+            <p class="text-muted">DNA Storage System - A project for HTGAA by Aryan Choudhary.</p>
+            <p class="text-muted"><a href="https://github.com/Z3R0C1PH3R/xtoDNA" target="_blank">GitHub Repo</a></p>
         </footer>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
